generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum CollectionStatus {
  OWNED
  WANTED
}

enum ScanStatus {
  QUEUED
  PROCESSING
  NEEDS_REVIEW
  CONFIRMED
  FAILED
}

enum ImportStatus {
  QUEUED
  PROCESSING
  COMPLETED
  FAILED
}

model User {
  id            String         @id @default(uuid())
  username      String         @unique
  email         String         @unique
  passwordHash  String
  pfpUrl        String?
  createdAt     DateTime       @default(now())
  updatedAt     DateTime       @updatedAt
  scanJobs      ScanJob[]
  userCards     UserCard[]
  userWishlists UserWishlist[]
}

model CardSet {
  id                 String           @id @default(uuid())
  normalizedSetKey   String           @unique
  brand              String?
  setName            String?
  yearManufactured   Int?             @db.SmallInt
  sport              String?
  season             String?
  cardConditionScale String?
  cardSize           String?
  cardThicknessPt    Int?             @db.SmallInt
  countryOfOrigin    String?
  language           String?
  material           String?
  metadata           Json?
  createdAt          DateTime         @default(now())
  updatedAt          DateTime         @updatedAt
  cardDefinitions    CardDefinition[]
}

model CardDefinition {
  id                  String          @id @default(uuid())
  normalizedCardKey   String          @unique
  cardSetId           String?
  cardNumber          String?
  name                String
  player              String?
  variant             String?
  legacySetText       String?
  category            String?
  subcategory         String?
  hasAutographVariant Boolean         @default(false)
  features            Json?
  originalOrReprint   String?
  parallelOrVariety   String?
  setType             String?
  insertSetName       String?
  cardType            String?
  isVintage           Boolean         @default(false)
  metadata            Json?
  createdAt           DateTime        @default(now())
  updatedAt           DateTime        @updatedAt
  cardSet             CardSet?        @relation(fields: [cardSetId], references: [id], onDelete: SetNull)
  userCards           UserCard[]
  userWishlists       UserWishlist[]

  @@index([cardSetId])
  @@index([name])
}

model UserCard {
  id               Int            @id @default(dbgenerated("nextval('\"CardRecordIdSeq\"'::regclass)"))
  userId           String
  cardDefinitionId String
  condition        String?
  isAutographed    Boolean        @default(false)
  autographFormat  String?
  imageUrl         String?
  originalImageKey String?
  thumbnailImageKey String?
  frontImageKey    String?
  backImageKey     String?
  isForTrade       Boolean        @default(false)
  isForSale        Boolean        @default(false)
  askingPriceCents Int?
  notes            String?
  gradeEstimate    String?
  confidence       Float?
  scanJobId        Int?
  createdAt        DateTime       @default(now())
  updatedAt        DateTime       @updatedAt
  user             User           @relation(fields: [userId], references: [id], onDelete: Restrict)
  cardDefinition   CardDefinition @relation(fields: [cardDefinitionId], references: [id], onDelete: Restrict)
  scanJob          ScanJob?       @relation(fields: [scanJobId], references: [id], onDelete: SetNull)

  @@index([userId])
  @@index([cardDefinitionId])
  @@index([scanJobId])
}

model UserWishlist {
  id                Int            @id @default(dbgenerated("nextval('\"CardRecordIdSeq\"'::regclass)"))
  userId            String
  cardDefinitionId  String
  priority          Int?           @db.SmallInt
  notes             String?
  imageUrl          String?
  originalImageKey  String?
  thumbnailImageKey String?
  gradeEstimate     String?
  confidence        Float?
  scanJobId         Int?
  createdAt         DateTime       @default(now())
  updatedAt         DateTime       @updatedAt
  user              User           @relation(fields: [userId], references: [id], onDelete: Restrict)
  cardDefinition    CardDefinition @relation(fields: [cardDefinitionId], references: [id], onDelete: Restrict)
  scanJob           ScanJob?       @relation(fields: [scanJobId], references: [id], onDelete: SetNull)

  @@index([userId])
  @@index([cardDefinitionId])
  @@index([scanJobId])
  @@unique([userId, cardDefinitionId])
}

model ScanJob {
  id                  Int            @id @default(autoincrement())
  status              ScanStatus     @default(QUEUED)
  sourceFilename      String?
  originalImageKey    String?
  thumbnailImageKey   String?
  backSourceFilename  String?
  backOriginalImageKey String?
  backThumbnailImageKey String?
  ocrText             String?
  error               String?
  userId              String?
  createdAt           DateTime       @default(now())
  updatedAt           DateTime       @updatedAt
  user                User?          @relation(fields: [userId], references: [id], onDelete: SetNull)
  candidates          ScanCandidate[]
  userCards           UserCard[]
  userWishlists       UserWishlist[]
}

model ScanCandidate {
  id              Int      @id @default(autoincrement())
  scanJobId       Int
  name            String
  set             String?
  year            Int?
  player          String?
  variant         String?
  sport           String?
  score           Float
  validationScore Float?
  sourceHints     Json?
  chosen          Boolean  @default(false)
  createdAt       DateTime @default(now())
  scanJob         ScanJob  @relation(fields: [scanJobId], references: [id], onDelete: Cascade)
}

model ImportJob {
  id           Int          @id @default(autoincrement())
  status       ImportStatus @default(QUEUED)
  filename     String
  totalRows    Int          @default(0)
  createdCount Int          @default(0)
  updatedCount Int          @default(0)
  skippedCount Int          @default(0)
  errorCount   Int          @default(0)
  errors       Json?
  createdAt    DateTime     @default(now())
  updatedAt    DateTime     @updatedAt
}
