Table users {
  id varchar [pk, note: 'UUID string']
  username varchar(100) [not null, unique]
  email varchar(320) [not null, unique]
  password_hash varchar(255) [not null]
  pfp_url varchar(2048)
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table card_sets {
  id varchar [pk, note: 'UUID string']
  normalized_set_key varchar(500) [not null, unique]
  brand varchar(100)
  set_name varchar(150)
  year_manufactured smallint
  sport varchar(50)
  season varchar(20)
  card_condition_scale varchar(50)
  card_size varchar(50)
  card_thickness_pt smallint
  country_of_origin varchar(80)
  language varchar(50)
  material varchar(50)
  metadata json
  created_at timestamp [not null]
  updated_at timestamp [not null]

  Indexes {
    (brand)
    (set_name)
    (year_manufactured)
  }
}

Table card_definitions {
  id varchar [pk, note: 'UUID string']
  normalized_card_key varchar(600) [not null, unique]
  card_set_id varchar
  card_number varchar(30)
  name varchar(200) [not null]
  player varchar(120)
  variant varchar(120)
  legacy_set_text varchar(255)
  category varchar(50)
  subcategory varchar(50)
  has_autograph_variant boolean [not null, default: false]
  features json
  original_or_reprint varchar(30)
  parallel_or_variety varchar(100)
  set_type varchar(30)
  insert_set_name varchar(150)
  card_type varchar(50)
  is_vintage boolean [not null, default: false]
  metadata json
  created_at timestamp [not null]
  updated_at timestamp [not null]

  Indexes {
    (card_set_id)
    (name)
  }
}

Table user_cards {
  id int [pk, note: 'Shared public card ID sequence with user_wishlist']
  user_id varchar [not null]
  card_definition_id varchar [not null]
  condition varchar(50)
  is_autographed boolean [not null, default: false]
  autograph_format varchar(50)
  image_url varchar(2048)
  original_image_key varchar(1024)
  thumbnail_image_key varchar(1024)
  front_image_key varchar(1024)
  back_image_key varchar(1024)
  is_for_trade boolean [not null, default: false]
  is_for_sale boolean [not null, default: false]
  asking_price_cents int
  notes varchar(2000)
  grade_estimate varchar(100)
  confidence float
  scan_job_id int
  created_at timestamp [not null]
  updated_at timestamp [not null]

  Indexes {
    (user_id)
    (card_definition_id)
    (scan_job_id)
  }
}

Table user_wishlists {
  id int [pk, note: 'Shared public card ID sequence with user_cards']
  user_id varchar [not null]
  card_definition_id varchar [not null]
  priority smallint
  notes varchar(2000)
  image_url varchar(2048)
  original_image_key varchar(1024)
  thumbnail_image_key varchar(1024)
  grade_estimate varchar(100)
  confidence float
  scan_job_id int
  created_at timestamp [not null]
  updated_at timestamp [not null]

  Indexes {
    (user_id)
    (card_definition_id) [unique]
    (scan_job_id)
  }
}

Table scan_jobs {
  id int [pk]
  status varchar(30) [not null]
  source_filename varchar(255)
  original_image_key varchar(1024)
  thumbnail_image_key varchar(1024)
  back_source_filename varchar(255)
  back_original_image_key varchar(1024)
  back_thumbnail_image_key varchar(1024)
  ocr_text text
  error text
  user_id varchar
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table scan_candidates {
  id int [pk]
  scan_job_id int [not null]
  name varchar(200) [not null]
  set varchar(255)
  year int
  player varchar(120)
  variant varchar(120)
  sport varchar(50)
  score float [not null]
  validation_score float
  source_hints json
  chosen boolean [not null, default: false]
  created_at timestamp [not null]

  Indexes {
    (scan_job_id)
  }
}

Table import_jobs {
  id int [pk]
  status varchar(30) [not null]
  filename varchar(255) [not null]
  total_rows int [not null]
  created_count int [not null]
  updated_count int [not null]
  skipped_count int [not null]
  error_count int [not null]
  errors json
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Ref: card_definitions.card_set_id > card_sets.id
Ref: user_cards.user_id > users.id
Ref: user_cards.card_definition_id > card_definitions.id
Ref: user_cards.scan_job_id > scan_jobs.id
Ref: user_wishlists.user_id > users.id
Ref: user_wishlists.card_definition_id > card_definitions.id
Ref: user_wishlists.scan_job_id > scan_jobs.id
Ref: scan_jobs.user_id > users.id
Ref: scan_candidates.scan_job_id > scan_jobs.id
